--- a/web/index.html
+++ b/web/index.html
@@ -1,40 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+// web/index.html
+<html>
 <head>
+    <base href="/">
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Munawar's Devfolio">
-    <meta name="og:title" content="Munawar - Random Dev!">
-    <meta name="og:url" content="https://www.munawarcodes.dev">
+    <meta name="description" content="Munawar - Random Dev!">
+    <meta property="og:title" content="Munawar - Random Dev!">
+    <meta property="og:url" content="https://www.munawarcodes.dev">
 
-    <title>Munawar Devfolio</title>
+    <title>Munawar</title>
 
-    <!-- Link to external CSS or fonts -->
-    <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-            rel="stylesheet"
-    />
-    <link
-            href="https://fonts.googleapis.com/css?family=Montserrat"
-            rel="stylesheet"
-    />
-    <!-- Any custom styles -->
-    <style>
-        html, body {
-          margin: 0;
-          padding: 0;
-          width: 100%;
-          height: 100%;
-          font-family: 'Montserrat', sans-serif;
-        }
-    </style>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
+    <!-- Jaspr will automatically inject the compiled JavaScript here -->
+    <script src="main.js" defer></script>
 </head>
 <body>
-<!-- This is where your Jaspr app will be rendered -->
-<div id="app"></div>
-
-<!-- Include the main Dart script compiled by Jaspr -->
-<script src="main.dart.js" type="application/javascript"></script>
+<!-- Jaspr will handle the body content -->
 </body>
 </html>
